--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '18.x' # Update this to a version higher than 18.13
 
       - name: Install Angular CLI
         run: npm install -g @angular/cli
