--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: ng build --prod --base-href="/Victims07102023War/"  # Replace 'repository' with your repository name
+        run: ng build --configuration production --base-href="/Victims07102023War/"  # Replace 'repository' with your repository name
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
