--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Modify this to match your branch name
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   deploy:
