--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Copy files to gh-pages branch
+      - name: Set up Git
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git checkout -b gh-pages origin/gh-pages || git checkout -b gh-pages
-          git merge main --no-edit
-          git push origin gh-pages
 
+      - name: Fetch and checkout gh-pages branch
+        run: |
+          git fetch origin gh-pages:gh-pages
+          git checkout gh-pages
+
+      - name: Merge changes from main into gh-pages
+        run: |
+          git merge main --no-edit
+
+      - name: Push changes to gh-pages branch
+        run: |
+          git push origin gh-pages
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
