--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "yaniv.dg.work@gmail.com"
+          git config --global user.name "yanivdg"
 
       - name: Fetch and checkout gh-pages branch
         run: |
