--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Copy Files to gh-pages
+name: Build and Deploy
 
 on:
   push:
@@ -6,40 +6,17 @@ on:
       - main  # Replace with your source branch name
 
 jobs:
-  copy_files:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Create orphaned gh-pages branch
-        run: git checkout --orphan gh-pages
-
-      - name: Remove existing files in gh-pages branch
-        run: git rm -rf .
-        
-      - name: Fetch and checkout gh-pages branch
-        run: |
-          git fetch origin gh-pages:gh-pages
-          git checkout gh-pages
-
-      - name: Merge changes from main into gh-pages
-        run: |
-          git merge main --no-edit --allow-unrelated-histories
-
-      - name: Push changes to gh-pages branch
-        run: |
-          git push origin gh-pages
-
-
-      - name: Push changes to gh-pages branch
-        run: |
-          git push origin gh-pages
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'  # Use a Node.js version that supports your Angular app
+          node-version: '14'  # Use a Node.js version that supports your Angular app
 
       - name: Install Angular CLI
         run: npm install -g @angular/cli
@@ -47,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
-        run: ng build --configuration production --base-href="/Victims07102023War/"  # Replace 'repository' with your repository name
+      - name: Build Angular app
+        run: ng build --configuration production --base-href="/Victims07102023War/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -65,5 +42,3 @@ jobs:
           https://api.github.com/repos/$GITHUB_REPOSITORY/pages | \
           jq -r '.html_url')
           echo "Published URL: $site_url"
-
-
