--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -25,9 +25,12 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          python install bs4
+          python install playwright
+          python install requests
 
       - name: Run Python Service
         run: |
-          python your_service_script.py  # Replace with your script name
+          python https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/Python/scrab.py  # Replace with your script name
 
       # Add additional steps as needed (e.g., tests, additional scripts)
