--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python install bs4
-          python install playwright
-          python install requests
+          python3 install bs4
+          python3 install playwright
+          python3 install requests
 
       - name: Run Python Service
         run: |
