--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install bs4 playwright requests
+          python -m pip install bs4 playwright requests flask
           # Install dependencies using 'python -m pip' command
 
       - name: Run Python Service
