--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -25,12 +25,12 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install bs4 playwright requests flask
+          python -m pip install bs4 playwright requests flask gunicorn
           # Install dependencies using 'python -m pip' command
 
       - name: Run Python Service
         run: |
           wget https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/Python/scrab.py -O scrab.py
-          python scrab.py  # Run the downloaded script
+          gunicorn -w 4 -b 0.0.0.0:8000 scrab:app  # Run the downloaded script
 
       # Add additional steps as needed (e.g., tests, additional scripts)
