--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -37,6 +37,6 @@ jobs:
           
       - name: push kidnapped.html
         run: |
-          git add .kidnapped.html
+          git add kidnapped.html
           git add commit -m "updating kiddnapped page list"
           git push origin main
