--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -39,6 +39,13 @@ jobs:
         run: |
           git config --global user.name 'yanivdg'
           git config --global user.email 'yaniv.dg.work@gmail.com'
-          git add kidnapped.html
-          git commit -m "updating kiddnapped.html page list"
-          git push origin main
+                   if [[ $(git status --porcelain) ]]; then
+                      echo "Changes detected."
+                      # Perform actions if changes are present, such as git add, commit, and push.
+                      git add kidnapped.html
+                      git commit -m "updating kiddnapped.html page list"
+                      git push origin main
+                  else
+                    echo "No changes to push."
+                  fi
+
