--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
+        
+      - name: Setting Index.html after build
+        run: |
+          wget https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/Python/githubrootset.py -O githubrootset.py
+          python githubrootset.py # Run the downloaded script
+          
       - name: Build Angular app
         run: ng build --configuration production --base-href="/Victims07102023War/"
 
