--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "@angular/youtube-player": "^17.0.4",
     "angularcli": "^6.0.1",
     "jsdom": "^23.0.1",
     "rxjs": "~7.8.0",
