--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
     "@angular/youtube-player": "^17.0.4",
+    "@google/generative-ai": "^0.1.3",
     "angularcli": "^6.0.1",
     "jsdom": "^23.0.1",
     "playwright": "^1.40.1",
