--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -2,7 +2,7 @@ name: Python Service Workflow
 
 on:
   schedule:
-    - cron: '0 */ 2 * * *'  # Runs every hour at the beginning of the hour
+      - cron: '0 0 * * *'  # Runs once a day at midnight
 
 jobs:
   build:
