--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install bs4 playwright requests flask gunicorn
+          playwright install
 
       - name: Run Python Service
         run: |
