--- a/.github/workflows/pythonservice.yml
+++ b/.github/workflows/pythonservice.yml
@@ -3,6 +3,7 @@ name: Python Service Workflow
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs once a day at midnight
+  workflow_dispatch:      # Add this line to enable manual triggering
 
 jobs:
   build:
